Some CSS update (refs #3502)

--- a/Actions/APP_SWITCHER/app_switcher_ie.css
+++ b/Actions/APP_SWITCHER/app_switcher_ie.css
@@ -21,6 +21,12 @@
     left: 0;
 }
 
+.css-menu-element-icon {
+    position: absolute;
+    right: 0;
+    top: 0.25em;
+}
+
 .css-application-icon {
     zoom: 1;
     display: inline;
