--- a/Actions/APP_SWITCHER/app_switcher.css
+++ b/Actions/APP_SWITCHER/app_switcher.css
@@ -10,12 +10,13 @@ body {
     padding: 0;
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: 12px;
 }
 
 /* Content Zone */
 .css-content {
     position: absolute;
-    top: 1.5625em;
+    top: 2em;
     bottom: 0;
     left: 0;
     right: 0;
@@ -36,8 +37,8 @@ body {
 
 /* Header zone */
 .css-header {
-    height: 1.5625em; /*25/16*/
-    line-height: 1.5625em;
+    height: 2em; /*25/16*/
+    line-height: 2em;
 }
 
 .css-header-left {
@@ -73,7 +74,7 @@ body {
 
 .css-menu-content {
     position: absolute;
-    top: 1.5625em;
+    top: 2em;
     left: 0;
     margin-top: 2px;
     background-color: white;
@@ -97,6 +98,7 @@ body {
     display: block;
     min-width: 10em;
     z-index: 0;
+    border: 1px rgb(184, 184, 184) solid;
 }
 
 .css-menu-content-hidden {
@@ -115,6 +117,7 @@ body {
     padding-right: 15px;
     overflow-y: hidden;
     border: 1px white;
+    padding-left: 5px;
 }
 
 .css-menu-element-icon {
@@ -150,7 +153,7 @@ body {
 }
 
 .css-selected-application-content {
-    margin-left: 1em;
+    margin-left: 16px;
 }
 
 /* Text search elements */
@@ -181,7 +184,6 @@ body {
 }
 
 /* shortcut */
-
 .css-shortcut-element {
     display: inline-block;
     cursor: pointer;
@@ -195,4 +197,15 @@ body {
 
 .css-shortcut-element-hidden {
     display: none;
+}
+
+/* Disconnect */
+.css-disconnect-button {
+    height: 100%;
+}
+
+/* User button*/
+.css-user-button {
+    height: 100%;
+    padding: 0 10px;
 }
