--- a/Actions/APP_SWITCHER/app_switcher.css
+++ b/Actions/APP_SWITCHER/app_switcher.css
@@ -24,7 +24,7 @@ body {
     background-color: #fff;
     margin-left: 1px;
     padding: 5px;
-    margin-top: 2px;
+    margin-top: 3px;
 }
 
 .css-iframe-content {
@@ -37,8 +37,10 @@ body {
 
 /* Header zone */
 .css-header {
-    height: 2em; /*25/16*/
+    height: 2em;
     line-height: 2em;
+    padding-bottom: 2px;
+    box-shadow: inset 0px -2px 5px rgb(157, 183, 201);
 }
 
 .css-header-left {
