--- a/Actions/APP_SWITCHER/app_switcher.css
+++ b/Actions/APP_SWITCHER/app_switcher.css
@@ -40,7 +40,9 @@ body {
     height: 2em;
     line-height: 2em;
     padding-bottom: 2px;
-    box-shadow: inset 0px -2px 5px rgb(157, 183, 201);
+    -webkit-box-shadow: inset 0px -2px 5px rgba(0, 0, 0, 0.17);
+    -moz-box-shadow: inset 0px -2px 5px rgba(0, 0, 0, 0.17);
+    box-shadow: inset 0px -2px 5px rgba(0, 0, 0, 0.17);
 }
 
 .css-header-left {
@@ -60,7 +62,6 @@ body {
 }
 
 .css-application-icon {
-    width: 1em;
     display: inline-block;
 }
 
@@ -206,8 +207,21 @@ body {
     height: 100%;
 }
 
+.css-logout {
+    margin-right: 5px;
+}
+
 /* User button*/
 .css-user-button {
     height: 100%;
     padding: 0 10px;
+}
+
+.css-user-icon {
+    height: 1em;
+}
+
+.css-user-icon img{
+    height: 100%;
+    width: auto;
 }
