Some fixes for IE6/IE7 (refs #3502)
Restore reload
Suppress icon on log button
Restore options save

--- a/Actions/APP_SWITCHER/app_switcher_ie.css
+++ b/Actions/APP_SWITCHER/app_switcher_ie.css
@@ -8,6 +8,7 @@
     width:15em;
     word-wrap: break-word;
     height: auto;
+    background-color: white;
 }
 
 .css-fold-menu {
@@ -32,6 +33,11 @@
     display: inline;
 }
 
+.css-application-icon img {
+    height: 24px;
+    width : 24px;
+}
+
 .css-shortcut-element {
     zoom: 1;
     display: inline;
@@ -48,4 +54,8 @@
 
 .css-content {
     height: auto;
+}
+
+.css-user-icon {
+    display: none;
 }
