--- a/Actions/APP_SWITCHER/app_switcher.css
+++ b/Actions/APP_SWITCHER/app_switcher.css
@@ -179,34 +179,32 @@ ul.css-contextualMenu-list {
 /* Text search elements */
 .css-search-zone {
     position: relative;
+    border:0px;
 }
 
 .css-icon-search {
     position: absolute;
-    right: -1px;
-    top: 0;
+    right: 0px;
+    top: 0.5em;
     cursor: pointer;
-    height: 2.1em;
-    width: 2.1em;
-    border-left: 1px solid lightGrey;
-    padding-top: 0.3em;
+    height: 100%;
 }
 
 .css-text-search {
-    height: 1.7em;
-    background: whitesmoke;
+    height: 2em;
+    background-color: #f6f6f6 !important;
+    background-image: none !important;
     width: 8em;
-    border: 1px solid lightGrey;
-    padding: 2px;
+    padding: 0px;
+    margin: 0px;
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     -ms-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
-
 .css-text-search-activate {
-    background: white;
+    background: white !important;
     width: 16em;
 }
 
