--- a/Actions/APP_SWITCHER/app_switcher.css
+++ b/Actions/APP_SWITCHER/app_switcher.css
@@ -85,9 +85,9 @@ body {
     left: 0;
     margin-top: 2px;
     background-color: white;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.12);
     -webkit-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.12);
     -moz-box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.12);
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.12);
 }
 
 .css-main-menu-content {
@@ -129,14 +129,13 @@ ul.css-contextualMenu-list {
     line-height: 2.5em;
     padding-right: 15px;
     overflow-y: hidden;
-    border: 1px white;
     padding-left: 5px;
     margin:2px;
     border: 1px solid #eee;
 }
 .css-contextualMenu-element.css-menu-element {
     border: 1px solid #fff;
-    
+
 }
 .css-menu-element-icon {
     position: absolute;
@@ -179,12 +178,12 @@ ul.css-contextualMenu-list {
 /* Text search elements */
 .css-search-zone {
     position: relative;
-    border:0px;
+    border:0;
 }
 
 .css-icon-search {
     position: absolute;
-    right: 0px;
+    right: 0;
     top: 0.5em;
     cursor: pointer;
     height: 100%;
@@ -195,8 +194,8 @@ ul.css-contextualMenu-list {
     background-color: #f6f6f6 !important;
     background-image: none !important;
     width: 8em;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     -ms-transition: all 0.2s ease-in-out;
@@ -248,7 +247,7 @@ ul.css-contextualMenu-list {
     width: auto;
 }
 
-
+/* Password zone*/
 #passwordDialogWrapper input[type=password] {
   width: 100%;
 }
