(refs #3663) Fix FF button position

--- a/Actions/APP_SWITCHER/app_switcher.css
+++ b/Actions/APP_SWITCHER/app_switcher.css
@@ -232,6 +232,14 @@ ul.css-contextualMenu-list {
     margin-right: 5px;
 }
 
+/* Adin */
+.css-admin-button {
+    height: 100%;
+}
+
+.css-admin {
+}
+
 /* User button*/
 .css-user-button {
     height: 100%;
